Changing the name of the template Markdown files.

--- a/inst/resources/41a_report-preamble.Rmd
+++ b/inst/resources/41a_report-preamble.Rmd
@@ -22,3 +22,9 @@ DMC_table %>%
 | Email address | `r TSC.CHAIR.EMAIL`   |
 | Address       | `r TSC.CHAIR.ADDRESS` | 
 
+
+## Trial Overview
+
+## Protocol Amendments
+
+## Details of interim analyses planned (and results if appropriate)
